--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,18 +4,18 @@ version = "0.1.0"
 edition = "2024"
 authors = ["Justin's Engineering Services, LLC"]
 
+[lib]
+crate-type = ["lib"]
+required-features = []
+doctest = false
+bench = false
+
 [dependencies]
 base64ct = "1.7.3"
-http-body-util = "0.1"
-hyper = { version = "1", features = ["client", "http1", "http2"] }
-hyper-util = { version = "0.1", features = ["tokio"] }
-pin-project-lite = "0.2"
-rustls-pki-types = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-tokio = { version = "1", features = ["full"] }
-tokio-rustls = "0.26"
-webpki-roots = "0.26"
+ureq = { version = "3.0", features = ["rustls", "gzip", "json"] }
+toml = "0.8.21"
 
 [lints.clippy]
 pedantic = { priority = -1, level = "warn" }
