--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 ureq = { version = "3.0", features = ["rustls", "gzip", "json"] }
 toml = "0.8.21"
+const_format = "0.2.34"
 
 [lints.clippy]
 pedantic = { priority = -1, level = "warn" }
