--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,6 @@ authors = ["Justin's Engineering Services, LLC"]
 [lib]
 crate-type = ["lib"]
 required-features = []
-doctest = false
 bench = false
 
 [dependencies]
@@ -17,6 +16,7 @@ serde_json = "1.0"
 ureq = { version = "3.0", features = ["rustls", "gzip", "json"] }
 toml = "0.8.21"
 const_format = "0.2.34"
+iso8601 = { version = "0.6.2", features = ["serde"] }
 
 [lints.clippy]
 pedantic = { priority = -1, level = "warn" }
