--- a/example/dioxus/Cargo.toml
+++ b/example/dioxus/Cargo.toml
@@ -40,11 +40,12 @@ wasm-bindgen-futures = { version = "0.4.50" }
 serde-wasm-bindgen = "0.4"
 
 [features]
-default = ["web"]
+# default = ["web", "browser"]
+default = ["web", "api"]
 web = ["dioxus/web"]
-server = ["dioxus/server"]
-desktop = ["dioxus/desktop"]
-mobile = ["dioxus/mobile"]
+browser = []
+api = []
+
 
 [profile]
 
