--- a/example/wasm-serv/Cargo.toml
+++ b/example/wasm-serv/Cargo.toml
@@ -23,10 +23,18 @@ web-sys = { version = "0.3", features = ["Location", "Window"] }
 console_error_panic_hook = { version = "0.1.7" }
 serde_json = "1"
 worker = { version = "0.6", features = ['http'] }
+# wasm-bindgen-futures = { version = "0.4" }
+# futures = "0.3"
 
 const_format = "0.2"
 base64ct = "1.7"
 serde-wasm-bindgen = { version = "0.4" }
+# http = "1.3"
+
+[features]
+default = ["api", "browser"]
+browser = []
+api = []
 
 [profile]
 
