--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 const_format = "0.2"
 iso8601 = { version = "0.6.2", features = ["serde"] }
+strum = { version = "0.27", features = ["derive"] }
 
 # "ureq" feature deps
 ureq = { version = "3.0", features = ["rustls", "gzip", "json"], optional = true }
