--- a/example/dioxus/Cargo.toml
+++ b/example/dioxus/Cargo.toml
@@ -28,6 +28,7 @@ web-sys = { version = "0.3.77", features = [
   "RequestCredentials",
 ] }
 js-sys = { version = "0.3.77" }
+strum = "0.27"
 
 # Dependencies for `api` feature
 reqwest = { version = "0.12", features = ["json"] }
