--- a/examples/cf-worker/wasm-serv/Cargo.toml
+++ b/examples/cf-worker/wasm-serv/Cargo.toml
@@ -14,13 +14,12 @@ wasm-opt = ["--enable-bulk-memory"]
 crate-type = ["cdylib"]
 
 [dependencies]
-thingspace-sdk = { path = "../../", default-features = false, features = [
+thingspace-sdk = { path = "../../../", default-features = false, features = [
   "worker",
 ] }
 serde = { version = "1", features = ["derive"] }
 serde_urlencoded = { version = "0.7" }
 web-sys = { version = "0.3", features = ["Location", "Window"] }
-console_error_panic_hook = { version = "0.1.7" }
 serde_json = "1"
 worker = { version = "0.6" }
 
