--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ serde_json = "1.0"
 const_format = { version = "0.2" }
 iso8601 = { version = "0.6", features = ["serde"] }
 strum = { version = "0.27", features = ["derive"] }
+# arraystring = { version = "0.3", features = ["serde"] }
 
 # "reqwest" feature deps
 reqwest = { version = "0.12", features = ["json"], optional = true }
@@ -57,7 +58,7 @@ required-features = ["worker"]
 
 [features]
 # default = ["wasm"]
-# default = ["worker"]
+default = ["worker"]
 # default = ["reqwest", "rustls"]
 reqwest = ["dep:reqwest"]
 rustls = ["reqwest?/rustls-tls"]
