--- a/examples/cf-worker/wasm-serv/wrangler.toml
+++ b/examples/cf-worker/wasm-serv/wrangler.toml
@@ -1,14 +1,14 @@
 name = "thingspace-sdk"
-compatibility_date = "2025-10-11"
+compatibility_date = "2025-10-27"
 send_metrics = false
-# upload_source_maps = true
+upload_source_maps = true
 main = "build/worker/shim.mjs"
 
 [assets]
 directory = "../dioxus/target/dx/web-client/release/web/public"
 binding = "ASSETS"
 not_found_handling = "single-page-application"
-run_worker_first = ["/api/*", "/browser/*"]
+run_worker_first = ["/api/*", "/browser/*", "/vzw*"]
 
 [build]
 command = "( cd ../dioxus && ./build.sh ) && cargo install -q worker-build && worker-build --release"
@@ -19,4 +19,4 @@ enabled = true
 
 [[kv_namespaces]]
 binding = "THINGSPACE"
-id = "8e9b1c2170e779b059b00b90fe57278b"
+id = "c009b0bea73e44db9aec38e114496717"
