--- a/examples/cf-worker/dioxus/Cargo.toml
+++ b/examples/cf-worker/dioxus/Cargo.toml
@@ -14,7 +14,8 @@ wasm-opt = ["--enable-bulk-memory"]
 thingspace-sdk = { path = "../../../", default-features = false, features = [
   "worker",
 ] }
-dioxus = { version = "0.6.0" }
+# dioxus = { version = "0.6.0" }
+dioxus = { version = "0.7" }
 serde_json = "1"
 web-sys = { version = "0.3.77", features = [
   "Headers",
