--- a/examples/cf-worker/dioxus/Cargo.toml
+++ b/examples/cf-worker/dioxus/Cargo.toml
@@ -15,7 +15,7 @@ thingspace-sdk = { path = "../../../", default-features = false, features = [
   "worker",
 ] }
 # dioxus = { version = "0.6.0" }
-dioxus = { version = "0.7" }
+dioxus = { version = "0.7", features = ["router"] }
 serde_json = "1"
 web-sys = { version = "0.3.77", features = [
   "Headers",
@@ -31,7 +31,7 @@ web-sys = { version = "0.3.77", features = [
 js-sys = { version = "0.3.77" }
 strum = "0.27"
 
-# Dependencies for `api` feature
+# Dependencies for `api`
 reqwest = { version = "0.12", features = ["json"] }
 serde = { version = "1", features = ["derive"] }
 serde_urlencoded = { version = "0.7" }
@@ -42,11 +42,8 @@ wasm-bindgen-futures = { version = "0.4.50" }
 serde-wasm-bindgen = "0.4"
 
 [features]
-# default = ["web", "browser"]
-default = ["web", "api"]
+default = ["web"]
 web = ["dioxus/web"]
-browser = []
-api = []
 
 
 [profile]
