--- a/examples/cf-worker/dioxus/Cargo.toml
+++ b/examples/cf-worker/dioxus/Cargo.toml
@@ -14,10 +14,8 @@ wasm-opt = ["--enable-bulk-memory"]
 thingspace-sdk = { path = "../../../", default-features = false, features = [
   "worker",
 ] }
-# dioxus = { version = "0.6.0" }
-dioxus = { version = "0.7", features = ["router"] }
-serde_json = "1"
 web-sys = { version = "0.3.77", features = [
+  "EventTarget",
   "Headers",
   "HtmlDocument",
   "Location",
@@ -28,11 +26,14 @@ web-sys = { version = "0.3.77", features = [
   "Window",
   "RequestCredentials",
 ] }
+dioxus = { version = "0.7", features = ["router"] }
+# dioxus = { version = "0.6.0" }
+serde_json = "1"
 js-sys = { version = "0.3.77" }
 strum = "0.27"
 
 # Dependencies for `api`
-reqwest = { version = "0.12", features = ["json"] }
+# reqwest = { version = "0.12", features = ["json"] }
 serde = { version = "1", features = ["derive"] }
 serde_urlencoded = { version = "0.7" }
 
@@ -41,10 +42,20 @@ wasm-bindgen = { version = "0.2.100" }
 wasm-bindgen-futures = { version = "0.4.50" }
 serde-wasm-bindgen = "0.4"
 
+# aerosocket = { version = "0.1", default-features = false, features = ["wasm"] }
+# ws_stream_wasm = { version = "0.7" }
+# pharos = { version = "0.5" }
+futures = { version = "0.3", default-features = false }
+futures-util = { version = "0.3", default-features = false }
+gloo-net = { version = "0.6", features = ["websocket"] }
+bytes = { version = "1" }
+thiserror = "2.0.17"
+anyhow = "1.0.100"
+# http = "1.4"
+
 [features]
 default = ["web"]
 web = ["dioxus/web"]
-
 
 [profile]
 
