--- a/examples/cf-worker/wasm-serv/Cargo.toml
+++ b/examples/cf-worker/wasm-serv/Cargo.toml
@@ -19,13 +19,19 @@ thingspace-sdk = { path = "../../../", default-features = false, features = [
 ] }
 serde = { version = "1", features = ["derive"] }
 serde_urlencoded = { version = "0.7" }
-web-sys = { version = "0.3", features = ["Location", "Window"] }
+web-sys = { version = "0.3", features = [
+  "EventSource",
+  "EventTarget",
+  "Location",
+  "Window",
+] }
 serde_json = "1"
-worker = { version = "0.6" }
+worker = { version = "0.7" }
 
 const_format = "0.2"
 base64ct = "1.7"
 serde-wasm-bindgen = { version = "0.4" }
+futures = { version = "0.3", default-features = false }
 
 [features]
 # default = ["api", "browser"]
