--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -2,12 +2,12 @@
 rustflags = ["-C", "target-cpu=native"]
 
 [profile.release]
-codegen-units = 1
-lto = "fat"
-strip = "debuginfo"
-panic = "abort"
 opt-level = "z"
 debug = false
+lto = true
+codegen-units = 1
+panic = "abort"
+strip = true
 incremental = false
 
 [profile]
